@@ -21,43 +21,129 @@ if prefer :deployment, 'heroku'
   "name": "#{app_name.humanize.titleize}",
   "description": "Starter application generated by Rails Composer",
   "logo": "https://avatars3.githubusercontent.com/u/788200",
-  "keywords": [
-    "Ruby #{RUBY_VERSION}",
-    "Rails #{Rails::VERSION::STRING}"
+TEXT
+    end
+    append_file 'app.json', "  \"repository\": \"https://github.com/RailsApps/#{prefs[:apps4]}\",\n" if prefs.keys.include?(:apps4)
+    append_file 'app.json', '  "keywords": [' + "\n"
+    append_file 'app.json', '    "Rails Composer",' + "\n"
+    append_file 'app.json', '    "RailsApps",' + "\n" + '    "starter",' + "\n" if prefs.keys.include?(:apps4)
+    append_file 'app.json', '    "RSpec",' + "\n" if prefer :tests, 'rspec'
+    append_file 'app.json', '    "Bootstrap",' + "\n" if prefer :frontend, 'bootstrap3'
+    append_file 'app.json', '    "Foundation",' + "\n" if prefer :frontend, 'pundit'
+    append_file 'app.json', '    "authentication",' + "\n" + '    "Devise",' + "\n" if prefer :authentication, 'devise'
+    append_file 'app.json', '    "authentication",' + "\n" + '    "OmniAuth",' + "\n" if prefer :authentication, 'omniauth'
+    append_file 'app.json', '    "authorization",' + "\n" + '    "roles",' + "\n" if prefer :authorization, 'roles'
+    append_file 'app.json', '    "authorization",' + "\n" + '    "Pundit",' + "\n" if prefer :authorization, 'pundit'
+    append_file 'app.json' do <<-TEXT
+    "Ruby",
+    "Rails"
   ],
   "scripts": {},
   "env": {
-    "RAILS_ENV": "production",
-    "ADMIN_EMAIL": {
-      "description": "The administrator's email address.",
-      "value": "user@example.com",
-      "required": true
-    },
-    "ADMIN_PASSWORD": {
-      "description": "The administrator's password.",
-      "value": "changeme",
-      "required": true
-    },
+TEXT
+    end
+    case prefs[:email]
+      when 'gmail'
+        append_file 'app.json' do <<-TEXT
     "GMAIL_USERNAME": {
-      "description": "Your Gmail address.",
+      "description": "Your Gmail address for sending mail.",
       "value": "user@example.com",
       "required": false
     },
     "GMAIL_PASSWORD": {
-      "description": "Your Gmail password.",
+      "description": "Your Gmail password for sending mail.",
       "value": "changeme",
       "required": false
     },
-    "OWNER_EMAIL": {
-      "description": "Destination for messages sent from the app's contact form.",
+TEXT
+        end
+      when 'sendgrid'
+        append_file 'app.json' do <<-TEXT
+    "SENDGRID_USERNAME": {
+      "description": "Your SendGrid address for sending mail.",
       "value": "user@example.com",
       "required": false
     },
+    "SENDGRID_PASSWORD": {
+      "description": "Your SendGrid password for sending mail.",
+      "value": "changeme",
+      "required": false
+    },
+TEXT
+        end
+      when 'mandrill'
+        append_file 'app.json' do <<-TEXT
+    "MANDRILL_USERNAME": {
+      "description": "Your Mandrill address for sending mail.",
+      "value": "user@example.com",
+      "required": false
+    },
+    "MANDRILL_APIKEY": {
+      "description": "Your Mandrill API key for sending mail.",
+      "value": "changeme",
+      "required": false
+    },
+TEXT
+      end
+    end
+    if prefer :authentication, 'omniauth'
+      append_file 'app.json' do <<-TEXT
+    "OMNIAUTH_PROVIDER_KEY": {
+      "description": "Credentials from Twitter, Facebook, or another provider.",
+      "value": "user@example.com",
+      "required": false
+    },
+    "OMNIAUTH_PROVIDER_SECRET": {
+      "description": "Credentials from Twitter, Facebook, or another provider.",
+      "value": "changeme",
+      "required": false
+    },
+TEXT
+      end
+    end
+    if prefer :authentication, 'devise'
+      append_file 'app.json' do <<-TEXT
+    "ADMIN_EMAIL": {
+      "description": "The administrator's email address for signing in.",
+      "value": "user@example.com",
+      "required": true
+    },
+    "ADMIN_PASSWORD": {
+      "description": "The administrator's password for signing in.",
+      "value": "changeme",
+      "required": true
+    },
     "DOMAIN_NAME": {
-      "description": "Required for sending mail. Use the app name you've given.",
+      "description": "Required for sending mail. Give an app name or use a custom domain.",
       "value": "myapp.herokuapp.com",
       "required": false
-    }
+    },
+TEXT
+      end
+    end
+    if prefer :apps4, 'learn-rails'
+      append_file 'app.json' do <<-TEXT
+    "OWNER_EMAIL": {
+      "description": "Destination for messages sent from the application's contact form.",
+      "value": "user@example.com",
+      "required": false
+    },
+TEXT
+      end
+    end
+    if (!prefs[:secrets].nil?)
+      prefs[:secrets].each do |secret|
+        append_file 'app.json' do <<-TEXT
+    "#{secret.upcase}": {
+      "description": "no description",
+      "required": false
+    },
+TEXT
+        end
+      end
+    end
+    append_file 'app.json' do <<-TEXT
+    "RAILS_ENV": "production"
   }
 }
 TEXT
